Variáveis Classificação e Clínica

--- a/lifeCare/src/pages/hello-ionic/hello-ionic.html
+++ b/lifeCare/src/pages/hello-ionic/hello-ionic.html
@@ -21,6 +21,14 @@
               <ion-option value="n">Não Urgente</ion-option>
             </ion-select>
           </ion-item>
+
+          <ion-item>
+            <ion-label>Clínica</ion-label>
+            <ion-select [(ngModel)]="clinica">
+              <ion-option value="a">Adulto</ion-option>
+              <ion-option value="i">Infantil</ion-option>
+            </ion-select>
+          </ion-item>
     </ion-list>
 
       <div style="text-align: center;">
